--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <title>Hani's Portfolio</title>
  </head>
  <body>
-    <h1>Hani's Portfolio</h1>
+    <h1>Arielle's Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
